@@ -1,4 +1,9 @@
 
+2017-06-04 Ron Norman <rjn@inglenet.com>
+	* common.c: Improved 'cobcrun -r' display for when
+	  unsetenv is used in runtime.cfg to show environment variable
+	  was removed and runtime.cfg variable was then present
+
 2017-05-31 Ron Norman <rjn@inglenet.com>
 
 	* fileio.c: 
@@ -229,6 +234,7 @@
 	  (fork a new COBOL process) and cob_sys_waitpid for CBL_GC_WAITPID
 	  (wait for completion of another process)
 	* system.def: Add CBL_GC_xxx as alias for CBL_OC_xxx
+
 2016-11-15 Ron Norman <rjn@inglenet.com>
 
 	* fileio.c ((cob_sys_open_file, cob_sys_create_file)): 
